# patchkit

./: .codespellrc  Cargo.toml  README.md  TODO
.github/workflows/: publish.yml  rust.yml
examples/: parse_patch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_ed.rs  parse_edit.rs  parse_quilt_series.rs  parse_series.rs  parse_unified.rs
src/: apply.rs  apply_tree.rs  ed.rs  lib.rs  parse.rs  patch.rs  quilt.rs  timestamp.rs  unified.rs
src/edit/: additional_tests.rs  corner_case_tests.rs  error_recovery_tests.rs  format_tests.rs  lex.rs  lex_tests.rs  lossless.rs  mod.rs  parse.rs  parse_tests.rs
src/edit/quilt/: comprehensive_tests.rs  editor.rs  lex.rs  lossless.rs  mod.rs  parse.rs  tests.rs
src/edit/series/: parse.rs
