[package]
name = "patchkit"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
description = "A library for parsing and manipulating patch files"
repository = "https://github.com/breezy-team/patchkit"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
homepage = "https://github.com/breezy-team/patchkit"

[dependencies]
chrono = "0.4"
lazy-regex = ">=2"
lazy_static = "1"
once_cell = "1.20.1"
regex = "1"
