[package]
name = "patchkit"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "A library for parsing and manipulating patch files"
repository = "https://github.com/breezy-team/patchkit"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
homepage = "https://github.com/breezy-team/patchkit"

[dependencies]
chrono = "0.4.31"
lazy-regex = "3.4"
lazy_static = "1.1.0"
once_cell = "1.21.3"
proc-macro2 = "1.0.60"
regex = "1"
rowan = "0.16"
