[package]
name = "patchkit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.patchkit]
path = ".."

[[bin]]
name = "parse_unified"
path = "fuzz_targets/parse_unified.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_ed"
path = "fuzz_targets/parse_ed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_edit"
path = "fuzz_targets/parse_edit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_series"
path = "fuzz_targets/parse_series.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_quilt_series"
path = "fuzz_targets/parse_quilt_series.rs"
test = false
doc = false
bench = false
